tests/ui/did_you_mean/compatible-variants.stderr
error[E0308]: mismatched types
  --> $DIR/compatible-variants.rs:21:5
   |
LL | fn b() -> Result<(), ()> {
   |           -------------- expected `Result<(), ()>` because of return type
LL |     f()
   |     ^^^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`
help: try adding an expression at the end of the block
   |
LL ~     f();
LL +     Ok(())
   |

error[E0308]: mismatched types
  --> $DIR/compatible-variants.rs:46:31
   |
LL |     let _: Result<i32, i32> = 1;
   |            ----------------   ^ expected `Result<i32, i32>`, found integer
   |            |
   |            expected due to this
   |
   = note: expected enum `Result<i32, i32>`
              found type `{integer}`
help: try wrapping the expression in a variant of `Result`
   |
LL |     let _: Result<i32, i32> = Ok(1);
   |                               +++ +
LL |     let _: Result<i32, i32> = Err(1);
   |                               ++++ +

error[E0308]: mismatched types
  --> $DIR/compatible-variants.rs:51:28
   |
LL |     let _: Hey<i32, i32> = 1;
   |            -------------   ^ expected `Hey<i32, i32>`, found integer
   |            |
   |            expected due to this
   |
   = note: expected enum `Hey<i32, i32>`
              found type `{integer}`
help: try wrapping the expression in a variant of `Hey`
   |
LL |     let _: Hey<i32, i32> = Hey::A(1);
   |                            +++++++ +
LL |     let _: Hey<i32, i32> = Hey::B(1);
   |                            +++++++ +

error[E0308]: mismatched types
  --> $DIR/compatible-variants.rs:54:29
   |
LL |     let _: Hey<i32, bool> = false;
   |            --------------   ^^^^^ expected `Hey<i32, bool>`, found `bool`
   |            |
   |            expected due to this
   |
   = note: expected enum `Hey<i32, bool>`
              found type `bool`
help: try wrapping the expression in `Hey::B`
   |
LL |     let _: Hey<i32, bool> = Hey::B(false);
   |                             +++++++     +

error[E0308]: mismatched types
  --> $DIR/compatible-variants.rs:74:16
   |
LL |     let a: A = B::Fst;
   |            -   ^^^^^^ expected `A`, found `B`
   |            |
   |            expected due to this
   |
help: try wrapping the expression in `A::B`
   |
LL |     let a: A = A::B { b: B::Fst };
   |                +++++++++        +

error[E0308]: mismatched types
  --> $DIR/compatible-variants.rs:80:17
   |
LL |     let a: A2 = B::Fst;
   |            --   ^^^^^^ expected `A2`, found `B`
   |            |
   |            expected due to this
   |
help: try wrapping the expression in `A2`
   |
LL |     let a: A2 = A2(B::Fst);
   |                 +++      +

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
